[package]
name = "coupon-collect"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Coupon collect problem solver"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
latexify = "0.0.0"
num = "0.4.0"
itertools = "0.10.5"

[dev-dependencies]

[features]
default = []
